Added open sans font for graphic

--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -31,7 +31,7 @@
     <div class="d-flex align-items-center justify-content-between">
         <h1>Exams</h1>
     </div>
-    <p>On this page, you can see your <b>enrolled exams</b> and second <b>enroll additional courses</b> for
+    <p>On this page, you can see your <b>enrolled courses</b> and second <b>enroll in additional courses</b> for
         the current semester down below. Choose from the following <b>tab bar</b> the option you like:
     </p>
 
@@ -43,7 +43,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" id="pills-enroll-exams-tab" data-toggle="pill" href="#pills-enroll-exams" role="tab"
-               aria-controls="pills-enroll-exams" aria-selected="false">2. Enroll Courses</a>
+               aria-controls="pills-enroll-exams" aria-selected="false">2. Enroll in Courses</a>
         </li>
     </ul>
 
@@ -147,7 +147,7 @@
         <div class="tab-pane fade" id="pills-enroll-exams" role="tabpanel" aria-labelledby="pills-enroll-exams-tab">
             <p>These are the <b>courses that you can enroll</b> for Information Design
                 in the current summer semester 2020. You can <b>enroll a courses</b>
-                by selecting it from the list below and clicking on the button "Enroll Selected Courses".</p>
+                by selecting it from the list below and clicking on the button "Enroll in Selected Courses".</p>
             <div class="my-2">
                 <div class="buttons-distribution-table">
                     <form class="form-inline button-table-search my-2">
@@ -166,6 +166,7 @@
             </div>
 
             <!-- Table: Mandatory Courses -->
+            <h2>Mandatory Courses</h2>
             <div class="table-responsive">
                 <table class="table">
                     <thead class="thead-dark">
@@ -182,11 +183,20 @@
                     <tbody>
                     <tr>
                         <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
+                        <td>Bachelor Thesis</td>
+                        <td>59384</td>
+                        <td>12</td>
                         <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
+                        <td>Thesis</td>
+                        <td>FA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Internship</td>
+                        <td>64364</td>
+                        <td>30</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Internship</td>
                         <td>PA</td>
                     </tr>
                     <tr>
@@ -216,98 +226,6 @@
                         <td>Project</td>
                         <td>PA</td>
                     </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Table: Internship -->
-            <div class="table-responsive">
-                <table class="table">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Status</th>
-                        <th>Name</th>
-                        <th>ID</th>
-                        <th>ECTS</th>
-                        <th>Lecturer</th>
-                        <th>Area</th>
-                        <th>Exam Type</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Table: Thesis -->
-            <div class="table-responsive">
-                <table class="table">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Status</th>
-                        <th>Name</th>
-                        <th>ID</th>
-                        <th>ECTS</th>
-                        <th>Lecturer</th>
-                        <th>Area</th>
-                        <th>Exam Type</th>
-                    </tr>
-                    </thead>
-                    <tbody>
                     <tr>
                         <td><input type="checkbox"></td>
                         <td>App Design</td>
@@ -358,6 +276,108 @@
             </div>
 
             <!-- Table: Specializations -->
+            <h2>Specializations</h2>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Status</th>
+                        <th>Name</th>
+                        <th>ID</th>
+                        <th>ECTS</th>
+                        <th>Lecturer</th>
+                        <th>Area</th>
+                        <th>Exam Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
+                        <td>5</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
+                        <td>PA</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Table: Projects -->
+            <h2>Projects</h2>
             <div class="table-responsive">
                 <table class="table">
                     <thead class="thead-dark">
@@ -421,69 +441,6 @@
                 </table>
             </div>
 
-            <!-- Table: Projects -->
-            <div class="table-responsive">
-                <table class="table">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Status</th>
-                        <th>Name</th>
-                        <th>ID</th>
-                        <th>ECTS</th>
-                        <th>Lecturer</th>
-                        <th>Area</th>
-                        <th>Exam Type</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
         </div>
 
     </div>
