--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <form action="#">
         <div class="text-center mb-4">
             <h1 class="h3 mb-3 font-weight-normal">Welcome Lisa!</h1>
-            <img src="assets/HdM_Logo_White.png" width="66" class="d-inline-block align-top mb-3" alt="Logo">
+            <img src="assets/HdM_Logo_Color.png" width="66" class="d-inline-block align-top mb-3" alt="Logo">
             <p>This is the study administration portal of the Stuttgart Media University for lecturers, students, and
                 employees.</p>
             <p>Please enter your credentials as follows to login to the portal.</p>
