Fixed logos and improved table

--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -31,8 +31,8 @@
     <div class="d-flex align-items-center justify-content-between">
         <h1>Exams</h1>
     </div>
-    <p>On this page, you can see your <b>enrolled courses</b> and second <b>enroll in additional courses</b> for
-        the current semester down below. Choose from the following <b>tab bar</b> the option you like:
+    <p>On this page, you can see your <b>registered courses</b> and <b>enroll in additional courses</b> for
+        the current semester. Choose from the following <b>tab bar</b> what you would like to do:
     </p>
 
     <!-- Tab bar -->
@@ -100,13 +100,13 @@
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
                         <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
                         <td>PA</td>
-                        <td>20.07.2020</td>
+                        <td>03.08.2020</td>
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
@@ -120,13 +120,13 @@
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
+                        <td>Mobile Medien</td>
+                        <td>334050a</td>
                         <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td>Specializations</td>
                         <td>PA</td>
-                        <td>20.07.2020</td>
+                        <td>03.08.2020</td>
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
