--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -31,7 +31,7 @@
     <div class="d-flex align-items-center justify-content-between">
         <h1>Exams</h1>
     </div>
-    <p>On this page, you can see your <b>registered courses</b> and <b>enroll in additional courses</b> for
+    <p>On this page, you can see your <b>registered courses</b>, deregister courses, and <b>enroll in additional courses</b> for
         the current semester. Choose from the following <b>tab bar</b> what you would like to do:
     </p>
 
