--- a/public/nav.html
+++ b/public/nav.html
@@ -13,7 +13,7 @@
         <ul class="navbar-nav mr-auto">
             <!-- Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
+                <a class="nav-link active" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
             </li>
             <!-- Study Progress -->
             <li class="nav-item">
