fix navbar and other minor issues

--- a/public/nav.html
+++ b/public/nav.html
@@ -1,4 +1,4 @@
-<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark nav-bg sticky-top justify-content-between">
+<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark nav-bg fixed-top justify-content-between">
     <a class="navbar-brand" href="/">
         <img src="assets/HdM_Logo_White.png" width="53" class="logo-picture d-inline-block align-top" alt="">
         <span class="logo-text">Study Administration<span class="logo-text-hide-mobile"> Portal</span></span>
