Implemented reset button for reset hidden tables

--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -159,6 +159,9 @@
                             <img src="../assets/search.png" height="21px" alt="Search icon">
                         </button>
                     </form>
+                    <button id="show-sections" class="button-white my-2">
+                        Reset Tables
+                    </button>
                     <button class="button-small my-2" type="submit" data-toggle="modal"
                             data-target="#modalEnrollCourses">
                         <span class="icon-enroll-courses">+</span>
@@ -171,7 +174,7 @@
             <!-- Table: Mandatory Courses -->
             <div class="section-mandatory-courses">
                 <div class="responsive-headline-button mb-3">
-                    <h2>Mandatory Courses</h2>
+                    <h2 class="section-headline">Mandatory Courses</h2>
                     <button id="hide-section-mandatory-courses" class="button-white" >
                         <img src="../assets/Hide.png" height="21px" alt="Delete icon">
                         <span>Hide Mandatory Courses</span>
@@ -289,7 +292,7 @@
             <!-- Table: Specializations -->
             <div class="section-specializations">
                 <div class="responsive-headline-button mb-3">
-                    <h2>Specializations</h2>
+                    <h2 class="section-headline">Specializations</h2>
                     <button id="hide-section-specializations" class="button-white">
                         <img src="../assets/Hide.png" height="21px" alt="Delete icon">
                         <span>Hide Specializations</span>
@@ -398,7 +401,7 @@
             <!-- Table: Projects -->
             <div class="section-projects">
                 <div class="responsive-headline-button mb-3">
-                    <h2>Projects</h2>
+                    <h2 class="section-headline">Projects</h2>
                     <button id="hide-section-projects" class="button-white">
                         <img src="../assets/Hide.png" height="21px" alt="Delete icon">
                         <span>Hide Projects</span>
