Implemented coloring for exams page

--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -91,55 +91,55 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <tr class="bg-row-projects">
                         <td><input type="checkbox"></td>
                         <td>App Design</td>
                         <td>53423</td>
                         <td>5</td>
                         <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
+                        <td class="font-color-td-projects">Project</td>
                         <td>PA</td>
                         <td>20.07.2020</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-specializations">
                         <td><input type="checkbox"></td>
                         <td>Mobile Medien</td>
                         <td>334050a</td>
                         <td>5</td>
                         <td>Prof. Dr. Jörg Westbomke</td>
-                        <td>Specializations</td>
+                        <td class="font-color-td-specializations">Specializations</td>
                         <td>PA</td>
                         <td>03.08.2020</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-projects">
                         <td><input type="checkbox"></td>
                         <td>App Design</td>
                         <td>53423</td>
                         <td>5</td>
                         <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
+                        <td class="font-color-td-projects">Project</td>
                         <td>PA</td>
                         <td>20.07.2020</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-specializations">
                         <td><input type="checkbox"></td>
                         <td>Mobile Medien</td>
                         <td>334050a</td>
                         <td>5</td>
                         <td>Prof. Dr. Jörg Westbomke</td>
-                        <td>Specializations</td>
+                        <td class="font-color-td-specializations">Specializations</td>
                         <td>PA</td>
                         <td>03.08.2020</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-mandatory-courses">
                         <td><input type="checkbox"></td>
-                        <td>App Design</td>
-                        <td>53423</td>
-                        <td>5</td>
-                        <td>Prof. Ralph Tille</td>
-                        <td>Project</td>
-                        <td>PA</td>
-                        <td>20.07.2020</td>
+                        <td>Bachelorkolloquium</td>
+                        <td>332520</td>
+                        <td>3</td>
+                        <td>Prof. Dr. Jörg Westbomke</td>
+                        <td class="font-color-td-mandatory-courses">Mandatory Course</td>
+                        <td>PL</td>
+                        <td>30.07.2020</td>
                     </tr>
                     </tbody>
                 </table>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="table-responsive">
                     <table class="table">
-                        <thead class="thead-dark">
+                        <thead class="bg-table-header-mandatory-courses">
                         <tr>
                             <th>Status</th>
                             <th>Name</th>
@@ -300,7 +300,7 @@
                 </div>
                 <div class="table-responsive">
                     <table class="table">
-                        <thead class="thead-dark">
+                        <thead class="bg-table-header-specializations">
                         <tr>
                             <th>Status</th>
                             <th>Name</th>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="table-responsive">
                     <table class="table">
-                        <thead class="thead-dark">
+                        <thead class="bg-table-header-projects">
                         <tr>
                             <th>Status</th>
                             <th>Name</th>
