Fixed spacing for h1 and navbar

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -25,8 +25,8 @@
 <header id="nav-placeholder"></header>
 
 <!-- Main -->
-<main role="main" class="container">
-    <h1 class="mt-5">Hello Lisa!</h1>
+<main role="main" class="container mt-5">
+    <h1>Hello Lisa!</h1>
     <p>Here, you get a quick overview of your study progress for Information Design</p>
     <h2>Your Study Progress: 73%</h2>
     <p>You have earned 182 out of 210 ECTS until now.
