--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -25,11 +25,11 @@
 <header id="nav-placeholder"></header>
 
 <!-- Main -->
-<main role="main" class="container">
+<main role="main" class="container mt-5">
 
     <!-- Introduction -->
     <div class="d-flex align-items-center justify-content-between">
-        <h1>Exams</h1>
+        <h1 class="mt-3">Exams</h1>
     </div>
     <p>On this page, you can see your <b>registered courses</b>, deregister courses, and <b>enroll in additional
         courses</b> for
